Fix - Overspacing with description on builder

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -988,10 +988,6 @@ body.everest-forms-builder-setup,
 				}
 			}
 
-			.description {
-				margin-bottom: 15px;
-			}
-
 			&.everest-forms-panel-field-textarea {
 				.evf-smart-tag-lists {
 					top: 40%;
